# napi-wasm-bench

./: .gitignore  Cargo.toml  README.md  benchmark.js  build.rs  index.html  package.json
src/: lib.rs
