[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
wasm = ["dep:wasm-bindgen"]
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
napi = { version = "2.12", optional = true, default-features = false, features = ["napi4"] }
napi-derive = { version = "2.12", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
napi-build = "2.0.1"
